# stopwatch

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  run.py  stopwatch.spec
terminal_stopwatch/: __init__.py  ascii_numbers.py  constants.py  input_handler.py  main.py  models.py  stopwatch.py  terminal.py
