[tool.poetry]
name = "stopwatch"
version = "0.1.0"
description = ""
authors = ["taejun <dugudugu0622@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyfiglet = "^1.0.2"
keyboard = "^0.13.5"
readchar = "^4.2.1"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
